# telegram-starknet-support-bot

./: .gitignore  README.md  ai_client.py  bot.py  config.py  database.py  env.example  generate-context.sh  main.py  pyproject.toml  render.yaml  requirements.txt  telegram-bot-context-prompt-2025-09-15_19-28-08_+08.txt  test_api.py
starknet_group_bot/: __init__.py
